--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "express": "^4.16.3",
+    "express-gzip": "0.0.1",
     "fast-memoize": "^2.3.2",
     "legi": "^1.1.0"
   }
